# server/api/swagger.json
@@ -13,6 +13,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "agents"
+                ],
                 "summary": "Get all agents",
                 "operationId": "getAllAgents",
                 "responses": {
@@ -51,6 +54,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "agents"
                 ],
                 "summary": "Create new agent",
                 "operationId": "createAgent",
@@ -98,6 +104,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "agents"
+                ],
                 "summary": "Get agent by ID",
                 "operationId": "getAgentByID",
                 "parameters": [
@@ -141,6 +150,9 @@
             "get": {
                 "produces": [
                     "multipart/x-mixed-replace"
+                ],
+                "tags": [
+                    "streaming"
                 ],
                 "summary": "Get stream frames",
                 "operationId": "getStreamFrames",
@@ -188,6 +200,9 @@
                 ],
                 "produces": [
                     "application/zip"
+                ],
+                "tags": [
+                    "agents"
                 ],
                 "summary": "Download agent files",
                 "operationId": "downloadAgentFiles",
@@ -242,6 +257,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "agents"
+                ],
                 "summary": "Get agent specifications",
                 "operationId": "getAgentSpecs",
                 "parameters": [
@@ -286,6 +304,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "overview"
+                ],
                 "summary": "Get fleet overview",
                 "operationId": "getFleetOverview",
                 "responses": {
@@ -294,6 +315,222 @@
                         "schema": {
                             "$ref": "#/definitions/AgentsOverview"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/groups": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "agent-groups"
+                ],
+                "summary": "Get all agent groups",
+                "operationId": "getAllAgentGroups",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/AgentGroup"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "agent-groups"
+                ],
+                "summary": "Create new agent group",
+                "operationId": "createAgentGroup",
+                "parameters": [
+                    {
+                        "description": "Create agent group body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/CreateAgentGroupBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/AgentGroup"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/groups/{id}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "agent-groups"
+                ],
+                "summary": "Get agent group by ID",
+                "operationId": "getAgentGroupByID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Agent group ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/AgentGroup"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "agent-groups"
+                ],
+                "summary": "Delete agent group by ID",
+                "operationId": "deleteAgentGroup",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Agent group ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "agent-groups"
+                ],
+                "summary": "Update agent group",
+                "operationId": "updateAgentGroup",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Agent group ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update agent group body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/UpdateAgentGroupBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -348,6 +585,26 @@
             "type": "object",
             "properties": {
                 "enrollmentKey": {
+                    "type": "string"
+                }
+            }
+        },
+        "AgentGroup": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
@@ -535,6 +792,23 @@
                 }
             }
         },
+        "CreateAgentGroupBody": {
+            "type": "object",
+            "properties": {
+                "agentIDs": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "description": {
+                    "$ref": "#/definitions/github_com_nougght_monitoring-system_server_internal_model.Optional-string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "CreateAgentResponse": {
             "type": "object",
             "properties": {
@@ -684,6 +958,34 @@
                     "items": {
                         "$ref": "#/definitions/AgentWithMemoryUsageDTO"
                     }
+                }
+            }
+        },
+        "UpdateAgentGroupBody": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "$ref": "#/definitions/github_com_nougght_monitoring-system_server_internal_model.Optional-string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_nougght_monitoring-system_server_internal_model.Optional-string": {
+            "type": "object",
+            "properties": {
+                "null": {
+                    "type": "boolean"
+                },
+                "set": {
+                    "type": "boolean"
+                },
+                "value": {
+                    "type": "string"
                 }
             }
         }
