# server/internal/service/agent_groups/agent_groups.go
@@ -1,4 +1,4 @@
-package agentregistry
+package agent_groups
 
 import (
 	"context"
